# T02_HW_Praktychna1

./: README.md
T02_CW_HW/: CMakeLists.txt  main.c
